fix: update logo image source and adjust header styles for better alignment

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -60,11 +60,9 @@
     display: flex;
   }
   display: flex;
-  align-items: center;
   gap: 10px;
   font-size: 24px;
   font-weight: 500;
-
 }
 
 .main-nav {
@@ -93,9 +91,12 @@
   }
 }
 
-
 @media (max-width: 768px) {
   .main-nav {
     display: none;
+  }
+  .logo {
+    display: block;
+    margin: 0 auto;
   }
 }
